# mds

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.ja.md  README.md  capture_output.rs  install.sh  mds.config.toml  package.json  package.md  release.mds.toml
crates/: Cargo.toml
crates/mds-cli/: Cargo.toml
crates/mds-cli/src/: main.rs  wizard.rs
crates/mds-cli/src/args/: mod.rs
crates/mds-cli/tests/: args.rs  wrapper_e2e.rs
crates/mds-core/: Cargo.toml  build.rs
crates/mds-core/src/: lib.rs
crates/mds-core/src/adapter/: mod.rs
crates/mds-core/src/config/: mod.rs
crates/mds-core/src/diagnostics/: mod.rs
crates/mds-core/src/diff/: mod.rs
crates/mds-core/src/doctor/: mod.rs
crates/mds-core/src/fs_utils/: mod.rs
crates/mds-core/src/generation/: mod.rs
crates/mds-core/src/init/: mod.rs
crates/mds-core/src/init/templates/claude-code/: command-check.md  command-lint.md  rules.md  skill.md
crates/mds-core/src/init/templates/codex-cli/: instructions.md  skill.md
crates/mds-core/src/init/templates/github-copilot-cli/: command-build.prompt.md  (+3 more)
crates/mds-core/src/manifest/: mod.rs
crates/mds-core/src/markdown/: mod.rs
crates/mds-core/src/model/: mod.rs
crates/mds-core/src/new/: mod.rs
crates/mds-core/src/package/: mod.rs
crates/mds-core/src/package_sync/: mod.rs
crates/mds-core/src/quality/: mod.rs
crates/mds-core/src/release_quality/: mod.rs
crates/mds-core/src/runner/: mod.rs
crates/mds-core/src/table/: mod.rs
crates/mds-core/tests/: parser_generation_mvp.rs
crates/mds-lang-rs/: Cargo.toml
crates/mds-lang-rs/src/: lib.rs
crates/mds-lsp/: Cargo.toml
crates/mds-lsp/src/: convert.rs  labels.rs  lib.rs  main.rs  server.rs  state.rs
crates/mds-lsp/src/capabilities/: code_action.rs  completion.rs  diagnostics.rs  hover.rs  navigation.rs  symbols.rs
crates/mds-lsp/tests/: capabilities.rs  diagnostics.rs
mds/cli/: Cargo.toml  mds.config.toml
mds/cli/.mds/: manifest.toml
mds/cli/.mds/source/: args.rs.md  lib.rs.md  main.rs.md  overview.md  wizard.rs.md
mds/cli/.mds/test/: args.rs.md
mds/cli/src/: args.rs  args_types.rs  lib.rs  main.rs  main_types.rs  wizard.rs  wizard_types.rs
mds/cli/tests/: args.rs  args_test.rs  main_test.rs  wizard_test.rs
mds/core/: Cargo.toml  build.rs  mds.config.toml
mds/core/.mds/: manifest.toml
mds/core/.mds/source/: adapter.rs.md  build.rs.md  config.rs.md  descriptor.rs.md  diagnostics.rs.md  diff.rs.md  doctor.rs.md  fs_utils.rs.md  generation.rs.md  hash.rs.md  lib.rs.md  manifest.rs.md  markdown.rs.md  model.rs.md  new.rs.md  overview.md  package.rs.md  package_sync.rs.md  quality.rs.md  release_quality.rs.md  runner.rs.md  table.rs.md
mds/core/.mds/source/descriptors/: angular.toml  astro.toml  js.toml  jsx.toml  rs.toml  svelte.toml  ts.toml  tsx.toml  vue.toml
mds/core/.mds/source/init/: mod.rs.md
mds/core/.mds/source/tooling/: clippy.toml  eslint.toml
mds/core/.mds/test/: parser_generation_mvp.rs.md
mds/core/src/: adapter.rs  adapter_types.rs  build_types.rs  config.rs  config_types.rs  descriptor.rs  descriptor_types.rs  diagnostics.rs  diagnostics_types.rs  diff.rs  diff_types.rs  doctor.rs  doctor_types.rs  fs_utils.rs  fs_utils_types.rs  generation.rs  generation_types.rs  hash.rs  lib.rs  manifest.rs  manifest_types.rs  markdown.rs  markdown_types.rs  model.rs  model_types.rs  new.rs  new_types.rs  package.rs  package_sync.rs  package_sync_types.rs  package_types.rs  quality.rs  quality_types.rs  release_quality.rs  runner.rs  runner_types.rs  table.rs  table_types.rs
mds/core/src/descriptors/: py.toml  rs.toml
mds/core/src/descriptors/languages/: tsx.toml
mds/core/src/descriptors/package-managers/: bun.toml  bundler.toml  conan.toml  hatch.toml  meson.toml  npm.toml  pub.toml  uv.toml
mds/core/src/init/: mod.rs  mod_types.rs
mds/core/src/tooling/: ruff-check.toml
mds/core/tests/: diagnostics_test.rs  diff_test.rs  generation_test.rs  manifest_test.rs  markdown_test.rs  model_test.rs  new_test.rs  package_sync_test.rs  package_test.rs  parser_generation_mvp.rs  parser_generation_mvp_test.rs  quality_test.rs  runner_test.rs  table_test.rs
mds/core/tests/init/: mod_test.rs
mds/lsp/: Cargo.toml  mds.config.toml
mds/lsp/.mds/: manifest.toml
mds/lsp/.mds/source/: convert.rs.md  labels.rs.md  lib.rs.md  main.rs.md  overview.md  server.rs.md  state.rs.md
mds/lsp/.mds/source/capabilities/: code_action.rs.md  completion.rs.md  diagnostics.rs.md  hover.rs.md  mod.rs.md  navigation.rs.md  symbols.rs.md
mds/lsp/.mds/test/: capabilities.rs.md  diagnostics.rs.md
mds/lsp/src/: convert.rs  convert_types.rs  labels.rs  labels_types.rs  lib.rs  main.rs  main_types.rs  server.rs  server_types.rs  state.rs  state_types.rs
mds/lsp/src/capabilities/: authoring.rs  code_action.rs  code_action_types.rs  completion.rs  completion_types.rs  diagnostics.rs  diagnostics_types.rs  hover.rs  hover_types.rs  mod.rs  navigation.rs  navigation_types.rs  symbols.rs  symbols_types.rs
mds/lsp/tests/: capabilities.rs  capabilities_test.rs  convert_test.rs  diagnostics.rs  diagnostics_test.rs  server_test.rs  state_test.rs
mds/lsp/tests/capabilities/: code_action_test.rs  completion_test.rs  diagnostics_test.rs  hover_test.rs  navigation_test.rs  symbols_test.rs
python/mds_cli/: pyproject.toml
python/mds_cli/mds_cli/: __main__.py
python/mds_lang_py/: pyproject.toml
python/mds_lang_py/mds_lang_py/: __init__.py
(+689 files in other folders)
