[workspace]
members = [
  "mds/core",
  "mds/cli",
  "mds/lsp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.1-alpha"
repository = "https://github.com/owo-x-project/owox-mds"
homepage = "https://github.com/owo-x-project/owox-mds"
documentation = "https://github.com/owo-x-project/owox-mds/tree/latest/docs"
