[workspace]
members = [
  "mds-core",
  "mds-cli",
  "mds-lang-rs",
  "mds-lsp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0-alpha.1"
repository = "https://github.com/owo-x-project/mds"
homepage = "https://github.com/owo-x-project/mds"
documentation = "https://github.com/owo-x-project/mds/tree/main/docs"
