[package]
name = "mds-core"
description = "Core library for mds — Markdown as the design and implementation source of truth."
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
serde_json = "1"
toml = "0.8"

[build-dependencies]
toml = "0.8"
