[package]
name = "mds-lsp"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "mds_lsp"
path = "src/lib.rs"

[[bin]]
name = "mds-lsp"
path = "src/main.rs"

[dependencies]
mds-core = { path = "../mds-core" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
