[package]
name = "mds-cli"
description = "CLI for mds — generate multi-language code from Markdown source of truth."
edition.workspace = true
license.workspace = true
version = "0.2.1-alpha"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "mds"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
mds-core = { path = "../core", version = "0.2.1-alpha" }
ratatui = "0.26"
