[package]
name = "mds-core"
description = "Core library for mds — Markdown as the design and implementation source of truth."
edition.workspace = true
license.workspace = true
version = "0.1.0-alpha.1"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[build-dependencies]
toml = "0.8"
