[package]
name = "mds-lsp"
description = "Language Server Protocol implementation for mds Markdown files."
edition.workspace = true
license.workspace = true
version = "0.1.0-alpha.1"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
name = "mds_lsp"
path = "src/lib.rs"

[[bin]]
name = "mds-lsp"
path = "src/main.rs"

[dependencies]
mds-core = { path = "../core", version = "0.1.0-alpha.1" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
