[project]
name = "mds-cli"
version = "0.1.0a1"
description = "Python wrapper for the native mds CLI."
requires-python = ">=3.13"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/owox/mds"
Repository = "https://github.com/owox/mds"

[project.scripts]
mds = "mds_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
