[project]
name = "mds-lang-py"
version = "0.1.0a1"
description = "Python language adapter for mds — file naming, quality tools, and test runner integration."
requires-python = ">=3.13"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/owo-x-project/owox-mds"
Repository = "https://github.com/owo-x-project/owox-mds"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
